[gd_scene load_steps=7 format=2]

[ext_resource path="res://water.png" type="Texture" id=1]
[ext_resource path="res://water.gd" type="Script" id=2]
[ext_resource path="res://charged water.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="water" type="RigidBody2D"]
collision_layer = 8
collision_mask = 8
gravity_scale = 2.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="w_spr" type="AnimatedSprite" parent="."]
scale = Vector2( 0.01, 0.01 )
frames = SubResource( 2 )

[node name="w_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="w_area"]
shape = SubResource( 3 )

[connection signal="body_entered" from="w_area" to="." method="_on_w_area_body_entered"]
[connection signal="body_exited" from="w_area" to="." method="_on_w_area_body_exited"]
